# fze

./: .gitignore  CMakeLists.txt  main.py  pyproject.toml
include/: calculator.h
src/: main.c
src/calculator/: CMakeLIsts.txt  CMakeLists.txt  calculator.c
src/fze/: CMakeLists.txt
src/fze_exe/: CMakeLists.txt  fze.c
src/jyy_os/: a.out  minimum_hello_world.c
src/jyy_os/1/: hanoi-nr.c  logisim.c  random_asm.c
src/jyy_os/workbench/: a.out  pstree.c
src/sort/: CMakeLists.txt
